@@ -1,35 +1,23 @@
 <Root>
   <commands>
     <cmd name="FileClose" _label="Close" _tip="Close this window"
-	 pixtype="stock" pixname="Close" accel="*Control*w"/>
+      pixtype="stock" pixname="Close" accel="*Control*w"/>
 
     <cmd name="FileExit" _label="E_xit" _tip="Exit the program"
-	 pixtype="stock" pixname="Quit" accel="*Control*q"/>
-
-    <cmd name="ViewShortcutBar" type="toggle"
-	 _label="_Shortcut Bar"
-	 _tip="Toggle whether to show the shortcut bar"/>
-
-    <cmd name="ViewFolderBar" type="toggle"
-	 _label="_Folder Bar"
-	 _tip="Toggle whether to show the folder bar"/>
+      pixtype="stock" pixname="Quit" accel="*Control*q"/>
 
     <cmd name="HelpSubmitBug" _label="Submit Bug Report"
-	 _tip="Submit a bug report using Bug Buddy"/>
-
-    <cmd name="SendReceive"
-     _tip="Send queued items and retrieve new items"
-     pixtype="pixbuf"/>
+      _tip="Submit a bug report using Bug Buddy"/>
 
     <cmd name="Settings" pixtype="pixbuf"/>
 
     <cmd name="ToggleOffline" _type="Toggle"
-	 _label="_Work Offline"
-	 _tip="Toggle whether we are working offline."/>
+      _label="_Work Offline"
+      _tip="Toggle whether we are working offline."/>
 
     <cmd name="HelpAbout" _label="About Ximian Evolution..."
-	 _tip="Show information about Ximian Evolution"
-	 pixtype="stock" pixname="About"/>
+      _tip="Show information about Ximian Evolution"
+      pixtype="stock" pixname="About"/>
   </commands>
 
   <menu>
@@ -38,115 +26,32 @@
 	<placeholder name="NewFirstItem"/>
 	<placeholder name="ComponentItems"/>
 
-	<separator f="" name="eshell6"/>
-
-	<menuitem name="Folder" verb="NewFolder"
-		  _label="_Folder..."
-		  _tip="Create a new folder"
-		  accel="*Control**Shift*f"
-		  pixtype="pixbuf"/>
-
-	<menuitem name="Shortcut" verb="NewShortcut"
-		  _label="_Shortcut..."
-		  _tip="Create a new shortcut"
-		  accel="*Control**Shift*s"/>
-
-	<separator f="" name="eshell6"/>
-
 	<menuitem name="EvolutionWindow"
-	          verb="OpenFolderInNewWindow"
-		  _label="Evolution _Window"
-		  _tip="Create a new window displaying this folder"
-		  accel="*Control**Shift*w"/>
-
+	  verb="OpenFolderInNewWindow"
+	  _label="Evolution _Window"
+	  _tip="Open a new Evolution window"
+	  accel="*Control**Shift*w"/>
       </submenu>
 
       <placeholder name="FileOps"/>
 
-      <separator f="" name="eshell1"/>
-
-      <submenu name="Folder" _label="_Folder">
-	<menuitem name="Folder"
-                  verb="NewFolder"
-		  _label="_New Folder"
-		  _tip="Create a new folder"
-		  accel="*Control**Shift*f"
-		  pixtype="pixbuf"/>
-
-        <separator f="" name="eshell1"/>
-
-        <menuitem name="OpenFolderInNewWindow"
-                  verb="OpenFolderInNewWindow"
-                  _label="Open in New _Window"
-                  _tip="Open this folder in an other window"/>
-        
-        <separator f="" name="eshell2"/>
-
-        <menuitem name="MoveFolder"
-                  verb="MoveFolder"
-                  _label="_Move..."
-                  _tip="Move this folder to another place"/>
-
-        <menuitem name="CopyFolder"
-                  verb="CopyFolder"
-                  _label="_Copy..."
-                  _tip="Copy this folder"/>
-
-        <separator f="" name="eshell3"/>
-
-        <menuitem name="DeleteFolder"
-                  verb="DeleteFolder"
-                  _label="_Delete"
-                  _tip="Delete this folder"/>
-
-        <menuitem name="RenameFolder"
-                  verb="RenameFolder"
-                  _label="_Rename..."
-                  _tip="Change the name of this folder"/>
-
-        <separator f="" name="eshell4"/>
-
-        <menuitem name="AddFolderToShortcutBar"
-                  verb="AddFolderToShortcutBar"
-                  _label="Add to _Shortcut Bar"
-                  _tip="Create a link to this folder in the shortcut bar"/>
-        
-        <placeholder name="ComponentPlaceholder"
-                     delimit="top"/>
-
-      </submenu>
-
-      <menuitem name="FileGoToFolder" verb=""
-		_label="_Go to Folder..."
-		_tip="Display a different folder" accel="*Control*g"/>
-
-      <menuitem name="FileOpenOtherUsersFolder"
-		verb="FileOpenOtherUsersFolder"
-		_label="Open Other _User's Folder..."
-		_tip="Open a folder belonging to some other user on the server"/>
-
-      <menuitem name="FileRemoveOtherUsersFolder"
-		verb="FileRemoveOtherUsersFolder"
-		_label="_Remove Other User's Folder"
-		_tip="Remove a folder added with &quot;Open Other User's Folder&quot;"/>
-
       <separator f="" name="eshell4"/>
       
       <menuitem name="FileImporter" verb=""
-		_label="_Import..."
-		_tip="Import data from other programs" accel="*Control*i"
-		pixtype="pixbuf"/>
+	_label="_Import..."
+	_tip="Import data from other programs" accel="*Control*i"
+	pixtype="pixbuf"/>
 
       <placeholder name="Print" delimit="top"/>
 
       <separator f="" name="eshell5"/>
 
       <menuitem name="ToggleOffline" verb=""
-		_label="Work Offline"
-		pixtype="pixbuf"/>
+	_label="Work Offline"
+	pixtype="pixbuf"/>
       
       <menuitem name="FileClose" verb=""
-		_label="_Close"/>
+	_label="_Close"/>
 
       <menuitem name="FileExit" verb="FileExit"/>
     </submenu>
@@ -156,13 +61,10 @@
 
     <submenu name="View" _label="_View">
       <placeholder name="ViewBegin"/>
-      <menuitem name="ShortcutBar" id="ViewShortcutBar"/>
-      <menuitem name="FolderBar" id="ViewFolderBar"/>
       <placeholder name="ViewAfterControl"/>
     </submenu>
 
     <submenu name="Actions" _label="_Actions">
-      <menuitem name="SendReceive" verb="" _label="_Send / Receive" accel="F9"/>
       <placeholder name="ComponentActionsPlaceholder"/>
     </submenu>
 
@@ -183,116 +85,25 @@
       <separator f="" name="eshell1"/>
 
       <menuitem name="HelpFAQ" verb=""
-		_label="Ximian Evolution _FAQ"/>
+	_label="Ximian Evolution _FAQ"/>
 
       <separator f="" name="eshell2"/>
 
       <menuitem name="HelpSubmitBug" verb=""
-		_label="Submit _Bug Report"/>
+	_label="Submit _Bug Report"/>
 
       <separator f="" name="eshell3"/>
 
       <menuitem name="HelpAbout" verb=""
-		_label="_About Ximian Evolution..."/>
+	_label="_About Ximian Evolution..."/>
 
     </submenu>
   </menu>
 
-  <dockitem name="Toolbar"
-	    relief="none"
-	    behavior="exclusive"
-	    config="0"
-	    _tip="Main toolbar"
-	    hlook="both_horiz"
-	    vlook="icon">
-
+  <dockitem name="Toolbar" relief="none" behavior="exclusive" config="0" _tip="Main toolbar"
+            hlook="both_horiz" vlook="icon">
     <control name="NewComboButton"/>
     <separator f="" name="eshell4"/>
-
-    <toolitem name="SendReceive" verb="SendReceive"
-     _label="Send / Receive" priority="1"
-     pixtype="pixbuf"/>
-
   </dockitem>
 
-  <popups>
-    <popup name="NewPopup">
-    	<placeholder name="ComponentItems"/>
-
-	<separator f="" name="eshell7"/>
-
-	<menuitem name="Folder" verb="NewFolder"
-		  _label="_Folder..."
-		  _tip="Create a new folder"
-		  accel="*Control**Shift*f"
-		  pixtype="pixbuf"/>
-
-	<menuitem name="Shortcut" verb="NewShortcut"
-		  _label="_Shortcut..."
-		  _tip="Create a new shortcut"
-		  accel="*Control**Shift*s"/>
-
-	<separator f="" name="eshell8"/>
-
-	<menuitem name="EvolutionWindow"
-	          verb="OpenFolderInNewWindow"
-		  _label="Evolution _Window"
-		  _tip="Create a new window displaying this folder"
-		  accel="*Control**Shift*w"/>
-    </popup>
-
-    <popup name="FolderPopup">
-      <menuitem name="ActivateView"
-		verb="ActivateView"
-		_label="_View"
-		_tip="View the selected folder"/>
-
-      <menuitem name="OpenFolderInNewWindow"
-		verb="OpenFolderInNewWindow"
-		_label="Open in New Window"
-		_tip="Open this folder in an other window"/>
-      
-      <separator f="" name="eshell1"/>
-
-      <menuitem name="MoveFolder"
-		verb="MoveFolder"
-		_label="_Move..."
-		_tip="Move this folder to another place"/>
-
-      <menuitem name="CopyFolder"
-		verb="CopyFolder"
-		_label="_Copy..."
-		_tip="Copy this folder"/>
-
-      <separator f="" name="eshell2"/>
-
-      <menuitem name="CreateNewFolder"
-                verb="NewFolder"
-                _label="_New Folder..."
-                _tip="Create a new folder"/>
-
-      <menuitem name="DeleteFolder"
-                verb="DeleteFolder"
-                _label="_Delete"
-                _tip="Delete this folder"/>
-
-      <menuitem name="RenameFolder"
-                verb="RenameFolder"
-                _label="_Rename..."
-                _tip="Change the name of this folder"/>
-
-      <separator f="" name="eshell3"/>
-
-      <menuitem name="AddFolderToShortcutBar"
-                verb="AddFolderToShortcutBar"
-                _label="Add to _Shortcut Bar"
-                _tip="Create a link to this folder in the shortcut bar"/>
-                
-      <placeholder name="ComponentPlaceholder"
-		   delimit="top"/>
-
-      <placeholder name="StorageFolderPropertiesPlaceholder"/>
-
-    </popup>
-  </popups>
 </Root>
