@@ -1,3 +1,9 @@
+2003-07-24  Ettore Perazzoli  <ettore@ximian.com>
+
+	* evolution.xml: Cleaned up a bunch of menu and toolbar items that
+	are not being used or do not belong to the shell anymore in the
+	new UI.  Also removed all pop-up menus.
+
 2003-07-17  Rodrigo Moya <rodrigo@ximian.com>
 
 	* evolution-tasks.xml: s/Expunge/Purge.
